[package]
name = "thruster"
version = "0.3.5"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A middleware based http async web server."
readme = "README.md"
license = "MIT"
documentation = "https://github.com/trezm/thruster"
homepage = "https://github.com/trezm/thruster"
repository = "https://github.com/trezm/thruster"

[dependencies]
bytes = "0.4"
futures = "0.1.18"
http = "0.1.5"
httparse = "1.1.2"
log = "0.3.6"
net2 = "0.2"
num_cpus = "1.0"
regex = "0.2"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
templatify = "0.2.2"
time = "0.1"
tokio = "0.1.3"
tokio-core = "0.1.15"
tokio-io = "0.1"

[dev-dependencies]
rustc-serialize = "0.3"
num_cpus = "1.0"
env_logger = { version = "0.3.4", default-features = false }
