[package]
name = "middleware-proc"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.27"
syn = { version = "0.15.27", features = ["full"] }
quote = "0.6.3"
lazy_static = "1.3.0"
uuid = { version = "0.7.4", features = ["v4"] }
