[package]
name = "thruster-app"
version = "0.7.17"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The App portion of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[profile.release]
debug = true

[features]
default = []
thruster_testing = []
hyper_server = []
thruster_async_await = [
  "thruster-core/thruster_async_await",
  "thruster-context/thruster_async_await",
  "thruster-async-await/thruster_async_await",
  "thruster-proc"
]
thruster_error_handling = [
  "thruster-core/thruster_error_handling",
  "thruster-async-await/thruster_error_handling"
]

[dependencies]
bytes = "0.4"
futures = "0.1.23"
futures-preview = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
templatify = "0.2.3"
thruster-async-await = { version = "=0.7.17", path = "../thruster-async-await" }
thruster-context = { version = "=0.7.17", path = "../thruster-context" }
thruster-core = { version = "=0.7.17", path = "../thruster-core" }
thruster-middleware = { version = "=0.7.17", path = "../thruster-middleware" }
thruster-proc = { version = "=0.7.17", path = "../thruster-proc", optional = true }
