[package]
name = "thruster-app"
version = "0.9.0-alpha.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The App portion of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = []
hyper_server = []
thruster_error_handling = [
  "thruster-core/thruster_error_handling",
  "thruster-async-await/thruster_error_handling"
]

[dependencies]
bytes = "0.5"
futures = "0.1.23"
templatify = "0.2.3"
thruster-async-await = { version = "=0.9.0-alpha.2", path = "../thruster-async-await" }
thruster-context = { version = "=0.9.0-alpha.2", path = "../thruster-context" }
thruster-core = { version = "=0.9.0-alpha.2", path = "../thruster-core" }
thruster-middleware = { version = "=0.9.0-alpha.2", path = "../thruster-middleware" }
thruster-proc = { version = "=0.9.0-alpha.2", path = "../thruster-proc" }
