[package]
name = "thruster-async-await"
version = "0.7.6"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "An async await shim for the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = ["thruster_async_await"]
thruster_async_await = [
  "thruster-core/thruster_async_await"
]
thruster_error_handling = [
  "thruster-core/thruster_error_handling"
]

[dependencies]
futures-legacy = { version = "0.1.23", package = "futures" }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
futures-util = "0.2.1"
thruster-core = { version = "0.7", path = "../thruster-core" }
tokio = { version = "0.1.20" }
