[package]
name = "thruster-async-await"
version = "0.9.0-alpha.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "An async await shim for the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = []
thruster_error_handling = [
  "thruster-core/thruster_error_handling"
]

[dependencies]
thruster-core = { version = "=0.9.0-alpha.2", path = "../thruster-core" }
