[package]
name = "thruster-context"
version = "0.8.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The context portion of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = []
hyper_server = [
  "hyper",
]
thruster_error_handling = [
  "thruster-core/thruster_error_handling"
]

[dependencies]
http = "0.1.18"
hyper = { version = "0.13", optional = true }
thruster-core = { version = "=0.8.0", path = "../thruster-core" }
thruster-middleware = { version = "=0.8.0", path = "../thruster-middleware" }
