[package]
name = "thruster-core-async-await"
version = "0.7.5"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "An async await shim for the core features of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_async_await = []

[dependencies]
futures-legacy = { version = "0.1.23", package = "futures" }
futures-preview = "0.3.0-alpha.13"
