[package]
name = "thruster-core"
version = "0.7.5"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core pieces of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://thruster.github.com"
homepage = "https://thruster.github.com"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_async_await = [
  "thruster-core-async-await/thruster_async_await"
]

[dependencies]
bytes = "0.4"
futures = "0.1.23"
http = "0.1.7"
httparse = "1.1.2"
regex = "0.2"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
smallvec = "0.6.2"
templatify = "0.2.3"
time = "0.1"
tokio-codec = "0.1.0"
tokio-io = "0.1"
thruster-core-async-await = { version = "0.7", path = "../thruster-core-async-await", optional = true }
