[package]
name = "thruster-core"
version = "0.7.14"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core pieces of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_async_await = [
  "thruster-core-async-await/thruster_async_await"
]
thruster_error_handling = [
  "thruster-core-async-await/thruster_error_handling"
]

[dependencies]
bytes = "0.4"
futures = "0.1.23"
http = "0.1.7"
httparse = "1.1.2"
regex = "1.1.6"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
smallvec = "0.6.2"
templatify = "0.2.3"
time = "0.1"
tokio = { version = "=0.2.0-alpha.5", branch = "master" }
tokio-codec = { version = "=0.2.0-alpha.5", branch = "master" }
tokio-io = { version = "=0.2.0-alpha.5", branch = "master" }
thruster-core-async-await = { version = "=0.7.14", path = "../thruster-core-async-await", optional = true }
