[package]
name = "thruster-core"
version = "0.9.0-alpha.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core pieces of the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_error_handling = [
  "thruster-core-async-await/thruster_error_handling"
]

[dependencies]
bytes = "0.5"
futures = "0.1.23"
httplib = { package = "http", version = "0.1.7" }
httparse = "1.1.2"
regex = "1.1.6"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
smallvec = "0.6.2"
templatify = "0.2.3"
time = "0.1"
tokio = { version = "0.2" }
tokio-util = { version = "0.2", features = ["full"]  }
thruster-core-async-await = { version = "=0.9.0-alpha.2", path = "../thruster-core-async-await" }
