[package]
name = "thruster-middleware"
version = "0.8.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The middleware for the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = []
hyper_server = [
  "hyper",
]

[dependencies]
futures-legacy = { version = "0.1.23", package = "futures" }
hyper = { version = "0.13", optional = true }
net2 = "0.2"
num_cpus = "1.0"
tokio = { version = "=0.2.5", branch = "master" }
tokio-util = { version = "=0.2.0", branch = "master", features = ["full"] }
thruster-core = { version = "=0.8.0", path = "../thruster-core" }
