[package]
name = "thruster-middleware"
version = "0.9.0-alpha.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The middleware for the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
default = []
hyper_server = [
  "hyper",
]
file = [
  "chashmap"
]
profiling = [
  "log"
]

[dependencies]
bytes = "0.5.4"
chashmap = { version = "2.2", optional = true }
futures-legacy = { version = "0.1.23", package = "futures" }
hyper = { version = "0.13", optional = true }
lazy_static = "1.4.0"
log = { version = "0.4.8", optional = true }
net2 = "0.2"
num_cpus = "1.0"
tokio = { version = "0.2" }
tokio-util = { version = "0.2", features = ["full"] }
thruster-core = { version = "=0.9.0-alpha.2", path = "../thruster-core" }
thruster-proc = { version = "=0.9.0-alpha.2", path = "../thruster-proc" }
