[package]
name = "thruster-proc"
version = "1.3.12"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The proc macros behind the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"
lazy_static = "1.3.0"
uuid = { version = "0.7.4", features = ["v4"] }
darling = "0.20.9"
rust-format = "0.3.4"
