[package]
name = "thruster-server"
version = "0.7.12"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core future wrappers aroun the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_async_await = []
thruster_tls = [
  "tokio-tls"
]
hyper_server = [
  "hyper",
  "thruster-context/hyper_server"
]

[dependencies]
hyper = { version = "=0.13.0-alpha.1", optional = true }
net2 = "0.2"
num_cpus = "1.0"
tokio = { version = "0.2.0-alpha.4" }
tokio-tls = { version = "0.3.0-alpha.4", optional = true }
native-tls = "0.2"
thruster-core = { version = "=0.7.12", path = "../thruster-core" }
thruster-app = { version = "=0.7.12", path = "../thruster-app" }
thruster-context = { version = "=0.7.12", path = "../thruster-context" }

