[package]
name = "thruster-server"
version = "0.7.18"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core future wrappers aroun the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_async_await = []
thruster_tls = [
  "tokio-tls",
  "native-tls",
]
hyper_server = [
  "hyper",
  "thruster-context/hyper_server",
  "tokio-tls",
]

[dependencies]
bytes = "0.4"
futures-util-preview = { version = "=0.3.0-alpha.19" }
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"], optional = true }
net2 = "0.2"
num_cpus = "1.0"
tokio = { version = "=0.2.0-alpha.6", branch = "master", features = ["tcp"] }
tokio-io = { version = "=0.2.0-alpha.6", branch = "master" }
# tokio-tls = { version = "=0.0.1", package = "trezm-temp-tokio-tls", optional = true }
tokio-tls = { version = "=0.3.0-alpha.6", optional = true }
native-tls = { version = "0.2", optional = true }
thruster-core = { version = "=0.7.18", path = "../thruster-core" }
thruster-app = { version = "=0.7.18", path = "../thruster-app" }
thruster-context = { version = "=0.7.18", path = "../thruster-context" }

