[package]
name = "thruster-server"
version = "0.9.0-alpha.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "The core future wrappers aroun the thruster web framework"
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[features]
thruster_tls = [
  "tokio-tls",
  "native-tls",
]
hyper_server = [
  "hyper",
  "thruster-context/hyper_server",
  "tokio-tls",
]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
hyper = { version = "0.13", optional = true }
net2 = "0.2"
num_cpus = "1.0"
tokio = { version = "0.2", features = ["tcp", "rt-core", "stream"] }
tokio-tls = { version = "0.3", optional = true }
tokio-util = { version = "0.2", features = ["full"]  }
native-tls = { version = "0.2", optional = true }
thruster-core = { version = "=0.9.0-alpha.2", path = "../thruster-core" }
thruster-app = { version = "=0.9.0-alpha.2", path = "../thruster-app" }
thruster-context = { version = "=0.9.0-alpha.2", path = "../thruster-context" }
