[package]
name = "thruster"
version = "0.9.0-alpha.3"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A middleware based http async web server."
readme = "README.md"
license = "MIT"
keywords = ["thruster", "router", "fast", "http", "hyper"]
documentation = "https://docs.rs/thruster"
homepage = "https://thruster.pete.pm"
repository = "https://github.com/trezm/thruster"
edition = "2018"

[[example]]
name = "hello_world"
required-features = []

[[example]]
name = "profiling"
required-features = []

[[example]]
name = "most_basic_ssl"
required-features = ["tls"]

[[example]]
name = "error_handling"
required-features = []

[[example]]
name = "hyper_most_basic"
required-features = ["hyper_server"]

[[example]]
name = "hyper_most_basic_ssl"
required-features = ["hyper_server"]

[[example]]
name = "multiple_services"
required-features = []

[[bench]]
name = "app"
harness = false

[[test]]
name = "integration_async"
path = "src/integration_async_tests.rs"

[features]
default = []
hyper_server = [
  "hyper",
]
tls = [
  "native-tls",
]
file = [
  "chashmap",
]

[dependencies]
async-trait = "0.1"
hyper = { version = "0.13.1", optional = true }
thruster-proc = { version = "=0.9.0-alpha.2", path = "../thruster-proc" }
bytes = "0.5.4"
chashmap = { version = "2.2", optional = true }
futures-legacy = { version = "0.1.23", package = "futures" }
futures = "0.3"
http = "0.2"
httplib = { package = "http", version = "0.1.7" }
httparse = "1.1.2"
lazy_static = "1.4.0"
log = { version = "0.4.8", optional = true }
net2 = "0.2"
num_cpus = "1.0"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = { version = "0.3", optional = true }
tokio-util = { version = "0.2", features = ["full"] }
native-tls = { version = "0.2", optional = true }
time = "0.1"
templatify = "0.2.3"
smallvec = "0.6.2"

[dev-dependencies]
criterion = "0.2.11"
diesel = { version = "1.3", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
smallvec = "0.6.2"
snafu = "0.4.1"
prost = "0.5.0"
http = "0.2"
